@@ -19,6 +19,10 @@ UNRELEASED, S3QL tip
   * The s3 backend now supports the "infrequent access" storage class
     (cf. https://aws.amazon.com/s3/storage-classes/)
 
+  * The 's3qlstat' command now prints more information about cache
+    usage, including the number of cache entries and pending object
+    removals.
+
 2016-02-23, S3QL 2.16
 
   * S3QL now supports (and requires) Python-LLFUSE 0.43 or newer
